--- a/templates/base.html
+++ b/templates/base.html
@@ -27,8 +27,8 @@
             --church-deep-blue: #1B2631;        /* Darker Navy - dark accents */
             --church-blue-gold: #F57F17;        /* Darker Gold - metallic accents */
             --church-stone: #EEEEEE;            /* Light Gray - neutral */
-            --church-light: #f9f7eb;
-            --church-white: #faf8f3;
+            --church-light: #eeece0;
+            --church-white: #ebe0c5;
             --church-gold: #d4af37;
             
             /* Semantic Colors with Church Theme */
@@ -49,9 +49,8 @@
 
         body {
             font-family: 'Crimson Text', serif;
-            
-            background: linear-gradient(135deg, var(--church-light) 0%, #e8ddc7 100%);
-           
+            /*background: linear-gradient(135deg, var(--church-light) 0%, #e8ddc7 100%); */
+            background-color: var(--church-gold);
             color: var(--church-dark);
             position: relative;
         }
@@ -242,7 +241,7 @@
         .card h3 {
             font-weight: 600;
             font-size: 2.2rem;
-            color: var(--church-primary);
+            
         }
 
         .card:hover {
@@ -252,7 +251,7 @@
 
 
         .card-stat {
-            background: linear-gradient(135deg, var(--church-white) 0%, #f8f5f0 100%);
+            
             border-radius: 12px;
             box-shadow: 0 4px 20px var(--church-shadow);
             border: none !important;
@@ -397,6 +396,10 @@
             border: 1px solid #ccc;
         }
 
+        .table-headers-borders th {
+            border: 1px solid #ccc;
+        }
+
        .table-container {
             display: block;
             width: 100%;
@@ -415,7 +418,7 @@
             padding: 5px;            /* reduce padding for compactness */
         }
 
-        .big-table th span {
+        .big-tableeeee th span {
             display: inline-block;
             transform: rotate(-20deg); /* tilt headers */
             transform-origin: bottom left; /* pivot from bottom-left corner */
@@ -427,7 +430,7 @@
             height: 120px;
         }
 
-        .big-table th::after {
+        .big-tableeee th::after {
             content: "";
             position: absolute;
             bottom: 0;
@@ -655,7 +658,7 @@
         }
 
         .chart-container {
-            background: var(--church-white);
+            background-color: white;
             border-radius: 12px;
             box-shadow: 0 4px 20px var(--church-shadow);
             padding: 20px;
