--- a/templates/districts/meetings/edit_attendant.html
+++ b/templates/districts/meetings/edit_attendant.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5 text-center">Edit Meeting Attendant</h1>
+          <h1 class="modal-title fs-5 text-center fw-bold">Edit Meeting Attendant</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
             <form action="{% url 'edit-attendant' %}" method="POST" enctype="multipart/form-data">
