--- a/templates/districts/sections/sections.html
+++ b/templates/districts/sections/sections.html
@@ -41,6 +41,7 @@
                     <td>{{ section.presbyter.name }}</td>
                     <td>
                         <div class="d-flex gap-1">
+                            <a href="{% url 'section-detail' section.id %}" class="btn btn-info btn-sm"><i class="fas fa-eye"></i></a>
                             <a class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#editChurchSectionModal{{section.id}}"><i class="fas fa-edit"></i></a>
                         </div>
                     </td>
